# warppcs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  spawn.sh
animations/: Cargo.toml
animations/src/: king.rs  lib.rs  macros.rs  sound.rs
animations/src/animals/: horse.rs
animations/src/buildings/: archer.rs  gold_farm.rs  mod.rs  pikeman.rs  shieldwarrior.rs  tent.rs  wall_basic.rs  wall_tower.rs  wall_wood.rs
animations/src/objects/: chest.rs  flag.rs  portal.rs  projectiles.rs
animations/src/objects/items/: chests.rs  feet.rs  heads.rs  weapons.rs
animations/src/ui/: animations.rs  army_formations.rs  commander_menu.rs  item_info.rs  map_icon.rs
animations/src/units/: mod.rs
animations/src/units/bandits/: bandit.rs
animations/src/units/humans/: archer.rs  commander.rs  mod.rs  pikeman.rs  shieldwarrior.rs
animations/src/world/: road.rs
animations/src/world/trees/: mod.rs  pine.rs
client/: Cargo.toml
client/assets/aseprite/: flag.aseprite  pike_man.aseprite  pike_man_rotation.aseprite
client/assets/aseprite/bandits/: MiniBanditHorseman.aseprite  MiniBanditThug.aseprite
client/assets/aseprite/buildings/: archer_house.aseprite  main_house_blue.aseprite  main_house_red.aseprite  pike_man_house.aseprite  pike_man_plot.aseprite  sign.aseprite  wall_1.aseprite  wall_2.aseprite  wall_basic.aseprite  wall_first_upgrade.aseprite  warrior_house.aseprite  warrior_plot.aseprite
client/assets/aseprite/humans/: MiniKingMan.aseprite
client/assets/aseprite/objects/: big_chest.aseprite  chest.aseprite
client/assets/sprites/animals/: horse.aseprite
client/assets/sprites/bandits/: MiniBandit.aseprite  MiniBanditBrute.aseprite  MiniBanditCrossBowman.aseprite  MiniBanditLeader.aseprite
client/assets/sprites/buildings/: archer_house.aseprite  archer_plot.aseprite  gold_mine.aseprite  main_house_blue.aseprite  pikeman_house.aseprite  siege_camp.aseprite  sign.aseprite  wall_1.aseprite  wall_2.aseprite  wall_3.aseprite  wall_second_upgrade.aseprite  warrior_house.aseprite
client/assets/sprites/humans/: MiniKingMan.aseprite  MiniWorker.aseprite
client/assets/sprites/objects/: chest_armor.aseprite  feet_armor.aseprite  flag.aseprite  head_armor.aseprite  portal.aseprite  weapons.aseprite
client/assets/sprites/ui/: building_menu.aseprite  defeat.aseprite  item_info.aseprite  map.aseprite  map_icons.aseprite  slot.aseprite
client/assets/sprites/world/: forest_end.aseprite  road.aseprite
client/assets/ui/commander/: formation.aseprite  menu.aseprite
client/src/: animation.rs  asset_loader.rs  background.rs  background_sound.rs  camera.rs  defeat.rs  gizmos.rs  input.rs  king.rs  main.rs  map.rs  menu.rs  networking.rs  sound.rs  ui.rs  upgrade.rs
client/src/animations/: animation.rs  flag.rs  king.rs  macros.rs  mod.rs  sprite_variant_loader.rs
client/src/animations/animals/: horse.rs
client/src/animations/buildings/: archer.rs  gold_farm.rs  main.rs  mod.rs  pikeman.rs  shieldwarrior.rs  tent.rs  wall_basic.rs  wall_tower.rs  wall_wood.rs
client/src/animations/objects/: chest.rs  flag.rs  mod.rs  portal.rs  projectiles.rs
client/src/animations/ui/: animations.rs  army_formations.rs  commander_menu.rs  item_info.rs  map_icon.rs  mod.rs
client/src/animations/units/: archer.rs  mod.rs  pikeman.rs  shieldwarrior.rs
client/src/animations/world/: mod.rs  road.rs
client/src/entities/: commander.rs  despawn.rs  highlight.rs  item_assignment.rs  items.rs  mod.rs  options.rs  player.rs  quickmenu.rs  spawn.rs
client/src/entities/map/: mod.rs
client/src/networking/: join_server.rs  mod.rs  spawn.rs
client/src/sound/: animation_sound.rs  background_sound.rs  mod.rs
client/src/ui_widgets/: text_input.rs
client/src/widgets/: menu.rs  mod.rs  quickmenu.rs
game_world/: Cargo.toml
game_world/src/: init_world.rs  lib.rs  world.rs
game_world/src/props/: mod.rs
game_world/src/props/trees/: mod.rs  pine.rs
player/: Cargo.toml
player/src/: animation.rs  attack.rs  chest.rs  client.rs  collect.rs  commander.rs  defeat.rs  item.rs  items.rs  knockout.rs  lib.rs  mount.rs  movement.rs  teleport.rs
ppc_console/: Cargo.toml  README.md
ppc_console/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  networking.rs
server/src/ai/: attack.rs  mod.rs
server/src/game_scenes/: mod.rs
server/src/physics/: collider.rs  mod.rs  movement.rs  projectile.rs
shared/: Cargo.toml  build.rs
shared/prefabs/: chest.scn.ron  gold_farm.scn.ron  main.scn.ronwall.scn.ron  marker.scn.ron  spawn_point.scn.ron  wall.scn.ron
shared/scenes/: base_scene.scn.ron
shared/src/: castle.rs  enum_map.rs  lib.rs  networking.rs  player.rs  player_attacks.rs  player_loadout.rs  player_movement.rs  player_port.rs  steamworks.rs  test_plugin.rs
shared/src/entities/: chest.rs  mod.rs  mount.rs  spawn_point.rs
shared/src/map/: base.rs  buildings.rs  mod.rs  spawn_point.rs
shared/src/map/scenes/: base.rs  camp.rs  fight.rs  mod.rs
shared/src/physics/: collider.rs  mod.rs
shared/src/server/: create_server.rs  economy.rs  lobby.rs  mod.rs  networking.rs  networking_old.rs
shared/src/server/ai/: attack.rs  bandit.rs  commander.rs  mod.rs  movement.rs  retreat.rs
shared/src/server/buildings/: gold_farm.rs  item_assignment.rs  mod.rs  recruiting.rs  respawn.rs  siege_camp.rs
shared/src/server/console/: mod.rs
shared/src/server/entities/: commander.rs  health.rs  item.rs  mod.rs
shared/src/server/game_scenes/: init_world.rs  map.rs  mod.rs  start_game.rs  travel.rs  world.rs
shared/src/server/physics/: army_slot.rs  attachment.rs  avian.rs  collider.rs  collider_trigger.rs  mod.rs  movement.rs  projectile.rs
shared/src/server/players/: chest.rs  flag.rs  interaction.rs  items.rs  killed.rs  knockout.rs  mod.rs  mount.rs
sprite_variant_loader/: Cargo.toml
sprite_variant_loader/src/: lib.rs  loader.rs
units/: Cargo.toml
units/src/: death.rs  lib.rs  pushback.rs
units/src/animations/: mod.rs
units/src/animations/bandits/: bandit.rs  mod.rs
units/src/animations/humans/: archer.rs  commander.rs  mod.rs  pikeman.rs  (+1 more)
(+150 files in other folders)
