[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "enum_as_f32_macro",
    "enum_mappable",
    "ppc_console",
    "console_protocol",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
