[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "enum_as_f32_macro",
    "enum_mappable",
    "ppc_console",
    "console_protocol",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.features]
default = ["client/default", "shared/default"]
steam = ["client/steam", "shared/steam"]
netcode = ["client/netcode", "shared/netcode"]

[workspace.dependencies]
bincode = "2.0.1"
fastrand = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
aeronet = "0.14.0"
bevy = { version = "0.16.1", default-features = false }
bevy_replicon = { version = "0.33" }
bevy-steamworks = { git = "https://github.com/glklimmer/bevy_steamworks" }
aeronet_webtransport = { version = "0.14.0" }
aeronet_replicon = { version = "0.14.0" }
aeronet_steam = { version = "0.14.0" }
