[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "enum_as_f32_macro",
    "enum_mappable",
    "ppc_console",
    "console_protocol",
    "sprite_variant_loader",
    "animations",
    "highlight",
    "travel",
    "buildings",
    "player",
    "army",
    "interaction",
    "units",
    "mounts",
    "inventory",
    "physics",
    "ai",
    "health",
    "projectiles",
    "remote",
    "lobby",
    "items",
    "interactables",
    "transport"
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.features]
default = ["client/default", "shared/default"]
steam = ["client/steam", "shared/steam"]
netcode = ["client/netcode", "shared/netcode"]

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
let_and_return = "allow"

[workspace.dependencies]
bincode = "2.0.1"
fastrand = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
aeronet = "0.17"
bevy = { version = "0.17", default-features = false }
bevy_replicon = { version = "0.36" }
bevy-steamworks = { git = "https://github.com/glklimmer/bevy_steamworks" }
aeronet_webtransport = { version = "0.17" }
aeronet_replicon = { version = "0.17" }
aeronet_steam = { version = "0.17" }
image = { version = "0.25.6", features = ["png"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
bevy_behave = { git = "https://github.com/glklimmer/bevy_behave" }
bevy-parallax = { git = "https://github.com/GianlucaFrongia/bevy-parallax"  }
