[package]
name = "client"
version = "0.1.0"
edition = "2024"

[features]
default = ["netcode", "bevy/dynamic_linking"]
steam = ["shared/steam", "bevy-steamworks", "aeronet_steam"]
netcode = ["shared/netcode", "aeronet_webtransport"]

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "std",
    "serialize",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "vorbis",
    "wayland",
] }
shared = { path = "../shared", default-features = false }
sprite_variant_loader = { path = "../sprite_variant_loader" }
animations = { path = "../animations" }
highlight = { path = "../highlight" }
bevy-steamworks = { workspace = true, optional = true }
bevy_replicon = { workspace = true, features = ["client"] }
bincode = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = [
    "client",
    "dangerous-configuration",
], optional = true }
aeronet_replicon = { workspace = true, features = ["client"] }
aeronet_steam = { workspace = true, features = [
    "client",
    "server",
], optional = true }

bevy-parallax = { git = "https://github.com/GianlucaFrongia/bevy-parallax" }
image = { workspace = true }
petgraph = { version = "0.8.1", features = ["serde-1"] }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
let_and_return = "allow"
