[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["netcode", "bevy/dynamic_linking"]
steam = ["shared/steam", "bevy-steamworks", "aeronet_steam"]
netcode = ["shared/netcode", "aeronet_webtransport"]

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "std",
    "serialize",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_camera",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "vorbis",
    "wayland",
] }
shared = { path = "../shared", default-features = false }
sprite_variant_loader = { path = "../sprite_variant_loader" }
animations = { path = "../animations" }
highlight = { path = "../highlight" }
travel = { path = "../travel" }
game_world = { path = "../game_world" }
buildings = { path = "../buildings" }
player = { path = "../player" }
army = { path = "../army" }
interaction = { path = "../interaction" }
units = { path = "../units" }
mounts = { path = "../mounts" }
inventory = { path = "../inventory" }
physics = { path = "../physics" }
ai = { path = "../ai" }
health = { path = "../health" }
projectiles = { path = "../projectiles" }
remote = { path = "../remote" }
lobby = { path = "../lobby" }
items = { path = "../items" }
interactables = { path = "../interactables" }
bevy-steamworks = { workspace = true, optional = true }
bevy_replicon = { workspace = true, features = ["client"] }
bincode = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = [
    "client",
    "dangerous-configuration",
], optional = true }
aeronet_replicon = { workspace = true, features = ["client"] }
aeronet_steam = { workspace = true, features = [
    "client",
    "server",
], optional = true }

bevy-parallax = { workspace = true }
image = { workspace = true }
