[package]
name = "game_world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "std",
    "serialize",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "vorbis",
    "wayland",
] }
shared = { path = "../shared", default-features = false }
travel = { path = "../travel" }
bevy_replicon = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
petgraph = { workspace = true }
