[package]
name = "ppc_console"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
ureq = { version = "3.0.11", features = ["json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
bevy_remote = "0.16.1"
clap = { version = "4.5.39", features = ["derive"] }
serde_json = "1.0.140"
dialoguer = "0.11.0"
console_protocol = { version = "0.1.0", path = "../console_protocol" }
