[package]
name = "ppc_console"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dirs = "6.0.0"
ureq = { version = "3.0.11", features = ["json"] }
bevy_remote = "0.16.0"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
console_protocol = { path = "../console_protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
