[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_state",
    "multi_threaded",
    "sysinfo_plugin",
] }
shared = { path = "../shared" }
bevy-steamworks = { workspace = true, optional = true }
bincode = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
renet_steam = { version = "1.0.0", features = ["bevy"], optional = true }
