[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["netcode"]
steam = ["bevy-steamworks", "aeronet_steam"]
netcode = ["aeronet_webtransport"]

[dependencies]
bevy-steamworks = { git = "https://github.com/glklimmer/bevy_steamworks", optional = true }
bevy = { version = "0.16", default-features = false, features = [
  "std",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_mesh_picking_backend",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "sysinfo_plugin",
  "vorbis",
  "x11",
  "bevy_remote",
  "bevy_log",
  "serialize",
] }
bevy_replicon = { version = "0.33", features = ["server"] }
enum_as_f32_macro = { path = "../enum_as_f32_macro" }
enum_mappable = { path = "../enum_mappable" }
bincode = "2.0.1"
fastrand = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
serde_json = "1.0.140"
console_protocol = { version = "0.1.0", path = "../console_protocol" }
aeronet = "0.14.0"
aeronet_webtransport = { version = "0.14.0", features = [
  "client",
  "server",
], optional = true }
aeronet_replicon = { version = "0.14.0", features = ["client", "server"] }
aeronet_steam = { version = "0.14.0", features = [
  "client",
  "server",
], optional = true }
