[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["netcode", "bevy/dynamic_linking"]
steam = ["bevy-steamworks", "aeronet_steam"]
netcode = ["aeronet_webtransport"]

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "vorbis",
    "x11",
    "bevy_remote",
    "bevy_log",
    "serialize",
] }
bevy-steamworks = { workspace = true, optional = true }
bevy_replicon = { workspace = true, features = ["server"] }
bincode = { workspace = true }
fastrand = { workspace = true }
serde = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = [
    "client",
    "server",
], optional = true }
aeronet_replicon = { workspace = true, features = ["client", "server"] }
aeronet_steam = { workspace = true, features = [
    "client",
    "server",
], optional = true }
petgraph = { workspace = true }

enum_as_f32_macro = { path = "../enum_as_f32_macro" }
enum_mappable = { path = "../enum_mappable" }
console_protocol = { version = "0.1.0", path = "../console_protocol" }

bevy_behave = { git = "https://github.com/glklimmer/bevy_behave" }
serde_json = "1.0.140"

